# ADS_Project_Min_-Search_Engine

./: CMakeLists.txt  ComplexityAnalysis.md  GroundTruthDataMaking.sh  Project_statement.md  README.md  StopWordDetection.c  errorAnalysis.md  esa.c  esa.h  esaExample.c  index  index_report.md  newStmr.c  new_report_1.doc  pseudocode_hash.md  removepunc.c  report(1).doc  report.doc  stemmingAnalysis.md  stop.c  stopCheck.c  test1.json
code/: CMakeLists.txt  README.md  data.json
code/Other_files/: GroundTruthDataMaking.sh  VisualizeResults.ipynb  stop.c
code/Other_files/txt/: As You Like It.txt  King Lear.txt  The Merchant of Venice.txt  The Merry Wives of Windsor.txt  The Taming of the Shrew.txt  The Third part of King Henry the Sixth.txt  The Tragedy of Coriolanus.txt  Timon of Athens.txt  (+4 more)
code/build_new/: CMakeCache.txt  Makefile  cmake_install.cmake
code/header_files/: AllFunctions.h
code/source_files/: Query.c  functions_in_threshold_test.c  hash_index.c  index.c  main.c  newStmr.c  test.c
code/txt/: A FUNERAL ELEGY..txt  A Midsummer Night's Dream.txt  Antony and Cleopatra.txt  Cymbeline.txt  Loves Labours Lost.txt  Othello, the Moore of Venice.txt  The Comedy of Errors.txt  The First part of King Henry the Fourth.txt  The Life and Death of King John.txt  The Life and Death of Richard the Second.txt  The Life and Death of Richard the Third.txt  The Life of King Henry the Eighth.txt  The Rape of Lucrece.txt  The Second part of King Henry the Fourth.txt  The Second part of King Henry the Sixth.txt  The Tempest.txt  The Tragedy of Hamlet, Prince of Denmark.txt
(+114 files in other folders)
